# seribot

./: Cargo.toml
src/: commands.rs  config.rs  main.rs
