[package]
name = "seribot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
ihex = "3.0.0"
serde = { version = "1.0.200", features = ["derive"] }
serialport = "4.3.0"
toml = "0.8.12"