[package]
name = "seribot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
feed-rs = "2.0.0"
futures = "0.3.30"
ihex = "3.0.0"
reqwest = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
serialport = "4.3.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"